# hdx-scraper-insecurity-insight

./: .gitignore  Makefile  README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.github/workflows/: dev_pipeline.yaml  publish.yaml  run-python-script.yaml  run-python-tests.yaml
config/: .pylintrc
src/hdx_scraper_insecurity_insight/: 2023-11-16-resource-list.txt  create_datasets.py  create_spreadsheets.py  generate_api_transformation_schema.py  read_excel.py  read_hdx.py  read_insecurity_insight_hdx.py  run.py  utilities.py  write_excel.py
tests/: conftest.py  test_create_datasets.py  test_create_spreadsheets.py  test_generate_api_transformation_schema.py  test_main.py  test_read_insecurity_insight_hdx.py  test_run.py  test_utilities.py
tests/fixtures/: 2016-2025 Aid Worker KIKA Overview Data.xlsx  2016-2025-AFG Aid Worker KIKA Incident Data.xlsx  2016-2025-AFG Attacks on Health Care Incident Data.xlsx  2018-2024-AFG Explosive Weapons Incident Data.xlsx  2020-2023 Conflict Related Sexual Violence Incident Data.xlsx  2020-2024-AFG Explosive Weapons Incident Data.xlsx  2020-2024-food-security-incident-data-backfill.xlsx  2020-2025 Aid Worker KIKA Incident Data.xlsx  2020-2025-AFG Aid Worker KIKA Incident Data.xlsx  2020-2025-AFG Education in Danger Incident Data.xlsx  2020-2025-AFG Food Security Incident Data.xlsx  2021-2023-AFG Protection in Danger Incident Data.xlsx  2021-2025-AFG Conflict Related Sexual Violence Incident Data.xlsx  2023-2024 Israel and oPt Attacks on Health Care Incident Data.xlsx  (+8 more)
(+124 files in other folders)
