[project]
name = "hdx_scraper_insecurity_insight"
version = "2023.11.1"
description = "HDX Scraper for Insecurity Insight Pipeline"
readme = "README.md"
requires-python = ">=3.7"
authors = [
  {email = "ian.hopkinson@un.org"},
  {name = "Ian Hopkinson"}
]

dependencies = [
    "pandas",
    "hdx-python-api",
    "hdx-python-country",
    "pytest",
    "pytest-cov",
  "black==24.3.0",
  "flake8>=6.1.0",
  "pylint>=3.0.1"
]

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''